--- a/home/src/main/resources/static/css/style.css
+++ b/home/src/main/resources/static/css/style.css
@@ -101,6 +101,12 @@ html, body {
 	color: white;
 }
 
+#login-btn {
+	background-color: #0080ff;
+	color: white;
+	margin-left: 10px;
+}
+
 #logout-btn {
 	background-color: #dc3545;
 	color: white;
